# et-g2p-fst

./: MANIFEST.in  pyproject.toml
et_g2p_fst/: __init__.py  g2p.py
